--- a/khj.css
+++ b/khj.css
@@ -134,168 +134,6 @@ section{
     color: white;
   }
 }
-/*요소 줄어들기*/
-@keyframes khj-fadeout {
-  0% {
-    position:relative;
-    opacity: 1;
-    transform: scale(1);
-  }
-  25% {
-    opacity: 0.75;
-    transform: scale(0.75);
-  }
-  50% {
-    opacity: 0.5;
-    transform: scale(0.5);
-  }
-  75% {
-    opacity: 0.25;
-    transform: scale(0.25);
-  }
-  100% {
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(0);
-  }
-}
-/*그리드 방향 전환*/
-@keyframes khj-flex-direction-change{
-  0%{
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas:
-    ". . "
-    ". B A "
-    ". . "; 
-  }
-
-  25%{
-    grid-template-areas:
-    ". . "
-    ". B "
-    ". A "; 
-  }
-
-  50% {
-    grid-template-areas:
-    ". B "
-    ". A "; 
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-  }
-
-  75% {
-    grid-template-areas:
-    ". B A "
-    ". . "; 
-  }
-
-  100% {
-    grid-template-areas:
-    "A B ";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 0;
-  }
-}
-/*div 높이 변환*/
-@keyframes khj-div-height-change{
-  from{
-    height:auto;
-  }
-  to{
-    height: fit-content;
-  }
-}
-
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer{
-  display: flex;
-  flex-direction: row;
-  .khj-col:nth-of-type(1){
-    order:2;
-    flex:1;
-  }
-  .khj-col:nth-of-type(2){
-    order:3;
-    flex:1;
-  }
-  .khj-col:nth-of-type(3){
-    order:1;
-    flex:1;
-  }
-}
-
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer .khj-col > div:not(.khj-Branding) {
-  animation: khj-fadeout 1s forwards ease-in-out;
-}
-
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer{
-  grid-template-columns: 0fr 2fr 1fr;
-  gap:15px;
-  .khj-col:nth-child(2){
-    display: grid;
-    div:nth-child(1){
-        grid-area: A;
-    }
-    div:nth-child(2){
-      grid-area: B;
-  }
-  animation: khj-flex-direction-change 0.5s forwards ease-in-out;
-  }
-}
-
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer .khj-col:nth-child(2){
-  .khj-img-container:nth-child(1){
-    margin-right: 15px;
-  }
-  .khj-img-container{
-    height: fit-content;
-  }
-}
-
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer .khj-col > div:not(.khj-Product) {
-  animation: khj-fadeout 1s forwards ease-in-out;
-}
-
-.khj-menu-container:has(#khj-App:checked) + .khj-gridcontainer{
-  grid-template-columns: 1fr 0fr 2fr;
-  gap:15px;
-  .khj-col:last-child{
-    display: grid;
-    div:nth-child(2){
-        grid-area: A;
-    }
-    div:nth-child(3){
-      grid-area: B;
-  }
-    animation: khj-flex-direction-change 0.5s forwards ease-in-out;
-  }
-}
-
-.khj-menu-container:has(#khj-App:checked) + .khj-gridcontainer .khj-col:last-child{
-  .khj-img-container:nth-child(2){
-    margin-left: -15px;
-    margin-right: 15px;
-  }
-  .khj-img-container{
-    height: fit-content;
-  }
-}
-
-.khj-menu-container:has(#khj-App:checked) + .khj-gridcontainer .khj-col > div:not(.khj-App) {
-  animation: khj-fadeout 1s forwards ease-in-out;
-}
-
-/*zoom in zoom out animation 만들어야 함*/
-
-.khj-gridcontainer{
-  display:grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap:15px;
-  width: 1320px;
-}
 
 .khj-col{
   display: flex;
@@ -392,6 +230,7 @@ section{
   align-items: center;
   gap: 10px;
 }
+
 
 .khj-description-icon{
   width: 30px;
@@ -568,14 +407,15 @@ section{
 
 /*test code*/
 .khj-flexcontainer{
-  display: none;
+  display: flex;
+  width: 1320px;
+  gap: 15px;
 }
-
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer{
+/*.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer{
   display: none;
-}
+}*/
 
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer~.khj-flexcontainer{
+.khj-menu-container:has(#khj-Web:checked) + .khj-flexcontainer{
   display: flex;
   width: 1320px;
   gap: 15px;
@@ -584,30 +424,6 @@ section{
   flex:1;
 }
 /*Web 클릭 시*/
-
-@keyframes khj-fadeout1 {
-  0% {
-    opacity: 1;
-    height: 100%;
-  }
-  25% {
-    opacity: 0.75;
-    height: 75%;
-  }
-  50% {
-    opacity: 0.5;
-    height: 50%;
-  }
-  75% {
-    opacity: 0.25;
-    height: 25%;
-  }
-  100% {
-    display:none;
-    opacity: 0;
-    height: 0%;
-  }
-}
 
 @keyframes khj-fadein {
   0% {
@@ -634,16 +450,17 @@ section{
   }
 }
 
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer~.khj-flexcontainer .khj-col > div:not(.khj-Branding) {
-  animation: khj-fadeout1 0.5s forwards ease-in-out;
+.khj-menu-container:has(#khj-Web:checked) + .khj-flexcontainer .khj-col > div:not(.khj-Branding) {
+  -webkit-animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
-khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer~.khj-flexcontainer .khj-col > .khj-Branding {
-  animation: khj-fadein 0.5s forwards ease-in-out;
-  animation-delay: 0.3s;
+khj-menu-container:has(#khj-Web:checked) + .khj-flexcontainer .khj-col > .khj-Branding {
+  -webkit-animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-.khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer~.khj-flexcontainer{
+.khj-menu-container:has(#khj-Web:checked) + .khj-flexcontainer{
   display: flex;
   flex-direction: row;
   .khj-col:nth-of-type(1){
@@ -661,24 +478,80 @@ khj-menu-container:has(#khj-Web:checked) + .khj-gridcontainer~.khj-flexcontainer
 }
 
 /*Card 클릭 시*/
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontainer{
+
+/*test*/
+
+@-webkit-keyframes khj-scale-out-center {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+    display: none;
+  }
+}
+@keyframes khj-scale-out-center {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+    display: none;
+  }
+}
+
+
+@-webkit-keyframes khj-scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes khj-scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
+/*.khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer{
   display: flex;
   width: 1320px;
   gap: 15px;
-}
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer{
-  display: none;
-}
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontainer .khj-col>div:not(.khj-Product) {
-  animation: khj-fadeout1 0.5s forwards ease-in-out;
-  animation-delay: 0.5s;
+}*/
+
+.khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer .khj-col>div:not(.khj-Product) {
+  -webkit-animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
-khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontainer .khj-col > .khj-Product {
-  animation: khj-fadein 0.5s forwards ease-in-out;
+khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer .khj-col > .khj-Product {
+  -webkit-animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-.khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontainer{
+.khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer{
   display: grid;
   grid-template-columns: 0fr 2fr 1fr;
   .khj-col .khj-img-container{
@@ -688,12 +561,14 @@ khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontaine
     display: none;
   }*/
   .khj-col:nth-of-type(2){
-    animation: khj-fadein 0.5s ease-in-out;
+    -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     flex-direction: row;
     gap: 15;
   }
   .khj-col:nth-of-type(3){
-    animation: khj-fadein 0.5s ease-in-out;
+    -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     gap: 15;
   }
   .khj-col:nth-of-type(2) div:nth-of-type(1){
@@ -708,4 +583,59 @@ khj-menu-container:has(#khj-Card:checked) + .khj-gridcontainer~.khj-flexcontaine
     order:3;
     flex:1;
   }
+}
+
+/*.khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer{
+  display: flex;
+  width: 1320px;
+  gap: 15px;
+}*/
+
+.khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer .khj-col>div:not(.khj-App) {
+  -webkit-animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+
+khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer .khj-col > .khj-App{
+  -webkit-animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer{
+  display: grid;
+  grid-template-columns: 1fr 0fr 2fr;
+  .khj-col .khj-img-container{
+  height: fit-content;
+  }
+  /*.khj-col:nth-of-type(1){
+    display: none;
+  }*/
+  .khj-col:nth-of-type(1){
+    -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    gap: 15;
+  }
+  .khj-col:nth-of-type(3){
+    -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    flex-direction: row;
+    gap: 15;
+  }
+  .khj-col:nth-of-type(1) div:nth-of-type(1){
+    order:1;
+    flex:1;
+  }
+  .khj-col:nth-of-type(3) div:nth-of-type(2){
+    order:2;
+    flex:1;
+  }
+  .khj-col:nth-of-type(3) div:nth-of-type(3){
+    order:3;
+    flex:1;
+  }
+}
+
+khj-menu-container:has(#khj-All:checked) + .khj-flexcontainer .khj-col > div{
+  -webkit-animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
