--- a/khj.css
+++ b/khj.css
@@ -405,6 +405,8 @@ section{
   animation: khj-sns-logo-contrast-2 0.3s ease-in-out forwards;
 }
 
+/*---------------------------------------Team css-------------------------------------------------*/
+
 /*test code*/
 .khj-flexcontainer{
   display: flex;
@@ -534,13 +536,6 @@ khj-menu-container:has(#khj-Web:checked) + .khj-flexcontainer .khj-col > .khj-Br
   }
 }
 
-
-/*.khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer{
-  display: flex;
-  width: 1320px;
-  gap: 15px;
-}*/
-
 .khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer .khj-col>div:not(.khj-Product) {
   -webkit-animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -557,9 +552,7 @@ khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer .khj-col > .khj-P
   .khj-col .khj-img-container{
   height: fit-content;
   }
-  /*.khj-col:nth-of-type(1){
-    display: none;
-  }*/
+
   .khj-col:nth-of-type(2){
     -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
@@ -585,12 +578,6 @@ khj-menu-container:has(#khj-Card:checked) + .khj-flexcontainer .khj-col > .khj-P
   }
 }
 
-/*.khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer{
-  display: flex;
-  width: 1320px;
-  gap: 15px;
-}*/
-
 .khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer .khj-col>div:not(.khj-App) {
   -webkit-animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: khj-scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -607,9 +594,7 @@ khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer .khj-col > .khj-Ap
   .khj-col .khj-img-container{
   height: fit-content;
   }
-  /*.khj-col:nth-of-type(1){
-    display: none;
-  }*/
+
   .khj-col:nth-of-type(1){
     -webkit-animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 	  animation: khj-tracking-in-expand-fwd 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
@@ -638,4 +623,18 @@ khj-menu-container:has(#khj-App:checked) + .khj-flexcontainer .khj-col > .khj-Ap
 khj-menu-container:has(#khj-All:checked) + .khj-flexcontainer .khj-col > div{
   -webkit-animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: khj-scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+/*추가 페이지*/
+
+.khj-lightbox{
+  display:none
+}
+
+.khj-right-description:has(#khj-App-1:checked) + .khj-App-lightbox{
+  position: absolute;
+  z-index: 100;
+  display:box;
+  background-color: color-mix(in srgb, black 80%, transparent 20%);
+  width: 100%;
 }
