--- a/reaction.css
+++ b/reaction.css
@@ -1,7 +1,34 @@
 @media (max-width: 991px) {
     /*kes*/
-    
+    /*bsj*/
+    #bsj-fourth-main{
+        grid-template-columns: 1fr 1fr;
+        gap: 24px;
+        
+    }
+    #bsj5{
+        flex-direction: column;
+    }
+    #bsj-calltoaction{
+        text-align: center;
+    }
+    #bsj-seventh-main{
+        grid-template-rows: repeat(4, 1fr); 
+        grid-template-columns: 1fr; 
+        gap: 24px;
+    }
+        
 }
 @media (max-width: 767px) {
     /*kes*/
+    /*bsj*/
+    #bsj-fourth-main {
+        grid-template-rows: repeat(4, 1fr); 
+        grid-template-columns: 1fr; 
+        gap: 24px;
+        margin:0 auto;
+    }
 }
+
+
+
