--- a/cms.css
+++ b/cms.css
@@ -52,6 +52,10 @@ body {
     margin: 0;
 }
 
+#cms1{
+    padding:0;
+}
+
 #cms1> header{
     z-index: 2000;
     background-color:  rgba(55, 81, 126, 0.9);
@@ -344,7 +348,8 @@ body {
 
 #cms2{
     max-width: 1320px;
-    margin: 60px auto;
+    /*margin: 60px auto;*/
+    background: white;
 }
 .cms__usDescription{
     display: grid;
@@ -407,7 +412,8 @@ body {
 
 
 #cms3{
-    margin: 60px 0;
+    /*margin: 60px 0;*/
+    background: white;
 }
 .cms3__container{
     display: flex;
