--- a/kes.css
+++ b/kes.css
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    padding-block: 60px;
+    /*padding-block: 60px;*/
     align-items: center;
 }
 
@@ -216,7 +216,7 @@
     display: flex;
     flex-direction: column;
     background-color: #f5f6f8;
-    padding-block: 60px;
+    /*padding-block: 60px;*/
     align-items: center;
 }
 .kes--questions-body {
