css 오류 해결-최종

--- a/bsj457.css
+++ b/bsj457.css
@@ -247,7 +247,7 @@ body {
     margin:0 51.5px;
     padding-right: calc(1.5rem* .5);
     padding-left: calc(1.5rem* .5);
-    padding-bottom: 60px;;
+    padding-bottom: 60px;
 }
 
 .bsj-fourth-maincard{
