--- a/ktr.css
+++ b/ktr.css
@@ -344,8 +344,8 @@ input:focus, textarea:focus {
     align-items: center;
     width: 40px;
     height: 40px;
-    background-color: gray;
-    border-color: #444444;
+    background-color: transparent;
+    border: 1px solid #444444;
     border-radius: 50%;
     text-decoration: none;
     color: white;
@@ -378,6 +378,13 @@ input:focus, textarea:focus {
 
 .ktr-footer-designed span {
     color: #3498db;
+}
+
+#ktr10{
+    padding-bottom: 60px;
+}
+#ktr11{
+    padding-top: 0;
 }
 
 @media (max-width: 768px) {
