--- a/kes.css
+++ b/kes.css
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    /*padding-block: 60px;*/
+    padding-block: 60px;
     align-items: center;
 }
 
@@ -60,10 +60,11 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width: 960px;
-    height: 302.3px;
+    width: 1140px;
+    height: 318.3px;
     padding-inline: 12px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
     position: relative;
 }
 @keyframes kes__slide {
@@ -87,6 +88,7 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
+    width: 1116.010px;
 }
 .kes--testimonials-body-humaninfo:nth-child(1) {
     animation: kes__slide 25s infinite;
@@ -129,17 +131,22 @@
     font-weight: bold;
     color: #37517e;
     line-height: 24px;
+    width: 100%;
+    text-align: center;
 }
 .kes--testimonials-body-humaninfo-job {
     margin: 0;
     font-size: 14px;
     color: color-mix(in srgb, #444444, transparent 40%);
+    width: 100%;
+    text-align: center;
 }
 .kes--testimonials-body-humaninfo-stars {
     display: flex;
     justify-content: center;
     gap: 2px;
     margin-block: 15px;
+    width: 100%;
 }
 .kes--testimonials-body-humaninfo-stars > .kes--star-icon {
     height: 16px;
@@ -159,6 +166,7 @@
     width: 850px;
     text-align: center;
     font-style: italic;
+    width: 100%;
 }
 .kes--testimonials-body-humaninfo-description::before {
     content: url(./svgs/quote_left.svg);
@@ -227,7 +235,7 @@
 }
 
 .kes--questions-cards-container {
-    width: 736px;
+    width: 950px;
     padding-inline: 12px;
     display: flex;
     flex-direction: column;
@@ -249,7 +257,7 @@
     background-color: #ffffff;
     gap: 10px;
     overflow: hidden;
-    max-height: 25px;
+    max-height: 65px;
     transition: 0.3s ease-in-out;
 }
 .kes--questions-body-card-header {
