--- a/bsj457.css
+++ b/bsj457.css
@@ -306,9 +306,26 @@ body {
     justify-content: space-between;
     align-items: center;
     line-height: var(--bs-body-line-height);
-  
+
+    position: relative;
+    background: url(./section5-bg.jpg) no-repeat center center; 
+    background-size: cover; 
+    background-attachment: fixed; 
+    overflow: hidden;
     
 }
+
+#bsj5::after{
+    content: "";
+    width: auto;
+    background-attachment: fixed;
+    background:  color-mix(in srgb, #37517e, transparent 35%);
+    position: absolute;
+    inset: 0;
+    z-index: 0;  
+
+}
+
 
 #bsj5::before{
     content: "";
