--- a/reaction.css
+++ b/reaction.css
@@ -1,4 +1,32 @@
 @media (max-width: 991px) {
+    /*cms*/
+    #cms1 .cms__main{
+        width: 80%;
+        flex-direction: column-reverse;
+    }
+    #cms2 .cms__usDescription{
+        width: 80%;
+        margin: 0 auto 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 36px;
+    }
+    #cms3 .cms3__container .cms3__upperPage{
+        flex-direction: column-reverse;
+        gap: 24px;
+        padding-right: 0;
+        padding-left: 0;
+    }
+    #cms3 .cms3__container .cms3__upperPage .cms3__upleft{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    #cms3 .cms3__container .cms3__downCon{
+        flex-direction: column;
+        gap: 24px;
+    }
     /*kes*/
     /*bsj*/
     #bsj-fourth-main{
@@ -20,6 +48,20 @@
         
 }
 @media (max-width: 767px) {
+    /*cms*/
+    #cms1 .cms__main{
+        padding-left: 6%;
+        padding-right: 6%;
+    }
+    #cms1 .cms__main img{
+        width: 100%;
+    }
+    #cms2 .cms__usDescription{
+        width: 75%;
+    }
+    #cms3 .cms3__container .cms3__downleft, #cms3 .cms3__container .cms3__downRight{
+        width: 90%;
+    }
     /*kes*/
     /*bsj*/
     #bsj-fourth-main {
