--- a/bsj457.css
+++ b/bsj457.css
@@ -327,16 +327,9 @@ body {
 }
 
 
-#bsj5::before{
-    content: "";
-    background-attachment: fixed;
-    background:  color-mix(in srgb, #37517e, transparent 35%);
-    position: fixed;
-    inset: 0;
-    z-index: -2;  
-}
-
 #bsj5>img{
+    overflow-x: hidden;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
     height: 100%;
@@ -347,11 +340,10 @@ body {
     
 }
 #bsj-calltoaction{
-  
+    z-index: 5;
     padding-right: calc(1.5rem* .5);
     padding-left: calc(1.5rem* .5);
     width: 75%;
-    
     
 }
 #bsj-calltoaction-title{
@@ -379,9 +371,11 @@ body {
     right:20px;
     text-align: center;
     padding: 0 12px;
+    z-index: 6;
 }
 
 #bsj-callocation-button{
+    
     font-family: var(--heading-font);
     font-weight: 500;
     font-size: 16px;
