--- a/reaction.css
+++ b/reaction.css
@@ -67,6 +67,19 @@
         grid-template-columns: 1fr; 
         gap: 24px;
     }
+
+    /*Khj*/
+    .khj-container-2{
+        display:grid;
+        grid-template-columns: 1fr;
+        gap:15px;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        padding: 0 40px;
+        width: 100%;
+        /*width: 960px;*/
+    }
     
 }
 @media (max-width: 767px) {
@@ -100,6 +113,18 @@
         grid-template-columns: 1fr; 
         gap: 24px;
         margin:0 auto;
+    }
+    /*khj*/
+    .khj-container-2{
+        display:grid;
+        grid-template-columns: 1fr;
+        gap:15px;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        padding: 0 40px;
+        width: 100%;
+        /*width: 960px;*/
     }
 }
 
