--- a/cms.css
+++ b/cms.css
@@ -170,9 +170,11 @@ body {
     filter: brightness(95%);
     color: #ffffff;
 }
-#cms1 .cms__header__nav .hamburger{
+
+#cms1 .cms__header1 .cms__hamburger{
     display: none;
 }
+
 
 .cms__main__container{
     background-color: #37517e;
@@ -183,7 +185,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 120px 0 60px;
+    padding: 160px 0 60px;
     max-width: 1320px;
     margin: 0 auto; 
 }
