--- a/reaction.css
+++ b/reaction.css
@@ -1,5 +1,8 @@
 @media (max-width: 1200px) {
     /*kes*/
+    .kes--header-title, .kes--header-description {
+        max-width: 960px;
+    }
     .kes--testimonials-humaninfo-container {
         width: 960px;
     }
@@ -40,6 +43,9 @@
         gap: 24px;
     }
     /*kes*/
+    .kes--header-title, .kes--header-description {
+        max-width: 708px;
+    }
     .kes--testimonials-humaninfo-container {
         width: 720px;
     }
@@ -85,6 +91,9 @@
         width: 90%;
     }
     /*kes*/
+    .kes--header-title, .kes--header-description {
+        max-width: 540px;
+    }
     .kes--testimonials-humaninfo-container {
         max-width: 540px;
     }
