--- a/bsj457.css
+++ b/bsj457.css
@@ -367,7 +367,7 @@ body {
 
 }
 
-#bsj-callocation-button-wrap{
+bsj-callocation-button-wrap{
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
     width: 330px;
@@ -375,7 +375,7 @@ body {
     right:20px;
     text-align: center;
     padding: 0 12px;
-
+    z-index: 10;
 }
 
 
