--- a/reset.css
+++ b/reset.css
@@ -1,6 +1,12 @@
 * {
     box-sizing: border-box;
   }
+
+  body {
+    width:100dvw;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
   
   html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,
   small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,
