--- a/bsj457.css
+++ b/bsj457.css
@@ -371,18 +371,13 @@ bsj-callocation-button-wrap{
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
     width: 330px;
-  
     right:20px;
     text-align: center;
     padding: 0 12px;
     z-index: 10;
 }
 
-
-
 #bsj-callocation-button{
-    
-
     font-family: var(--heading-font);
     font-weight: 500;
     font-size: 16px;
@@ -395,6 +390,8 @@ bsj-callocation-button-wrap{
     border: 2px solid var(--contrast-color);
     color: var(--contrast-color);
     text-decoration: none;
+    position: relative;
+    z-index: 11;
 }
 
 
@@ -519,7 +516,6 @@ bsj-callocation-button-wrap{
     border-radius: 50px;
     transition: none;
     transition: 0.3s;
-
 }
 
 
