--- a/cms.css
+++ b/cms.css
@@ -8,6 +8,9 @@
     --heading-font: "Jost", sans-serif;
     --nav-font: "Poppins", sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: var(--default-font);
 }
