--- a/kes.css
+++ b/kes.css
@@ -230,7 +230,7 @@
     display: flex;
     flex-direction: column;
     background-color: #f5f6f8;
-    /*padding-block: 60px;*/
+    padding-block: 60px;
     align-items: center;
 }
 .kes--questions-body {
