--- a/ktr.css
+++ b/ktr.css
@@ -336,9 +336,10 @@ input:focus, textarea:focus {
 .ktr-footer-social-links {
     text-align: center;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 10px;
+    margin-top: 10px;
 }
 
 .ktr-footer-social-links a {
@@ -402,4 +403,11 @@ input:focus, textarea:focus {
         flex-direction: column;
         align-items: left;
     }
+}
+
+.ktr-follow-us {
+    text-align: left;
+}
+.ktr-footer-container-row {
+    text-align-last: left;
 }
