css calltoaction 소문자 수정,pricing 버튼 글자 색 수정

--- a/bsj457.css
+++ b/bsj457.css
@@ -491,7 +491,7 @@ bsj-callocation-button-wrap{
     width: 330px;
   
     right:20px;
-  
+    color: var(--accent-color);
     padding: 0 12px;
     position: relative;
     z-index: 10;
