--- a/ktr.css
+++ b/ktr.css
@@ -61,7 +61,8 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 20px;
-     gap : 20px; /*위아래 배치 해결하고자  */
+    gap : 20px; /*위아래 배치 해결하고자  */
+    padding: 0 60px;
 }
 
 .contact-info {
@@ -152,6 +153,7 @@ body {
 .contact-form form {
     display: flex;
     flex-direction: column;
+  
 }
 
 .contact-form form input,
@@ -159,22 +161,25 @@ body {
     margin-bottom: 15px;
     padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    
     font-size: 16px;
 }
 
-.contact-form form button {
-    padding: 10px;
-    background-color: #47b2e4;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+#ktr-send{
+    width: fit-content;
+    
 }
+#sendyourm{
+    text-align: center;
+}
+.ktr-form-details{
+    margin-bottom: 8px;
+}
+
 
 .contact-form form button:hover {
-    background-color: #47b2e4;
+   
+    background: color-mix(in srgb, #47b2e4, transparent 25%);
 }
 
 @media (max-width: 768px) {
@@ -204,7 +209,7 @@ input:focus, textarea:focus {
     border: 0;
     font-size: 15px;
     padding: 12px 25px;
-    margin: -7px -405px -7px 0;
+    margin: -7px -0 -7px 0;
     border-radius: 50px;
     color: white;
     background-color: #47b2e4;
