--- a/ktr.css
+++ b/ktr.css
@@ -245,11 +245,12 @@ footer {
     font-weight: bold;
     color: #37517e;
     margin-bottom: 10px;
-    font-family: var(--heading-font);
+    font-family: "Jost", sans-serif;
 }
 
 .ktr-footer-newsletter p {
-    font-size: 16px;
+    font-size: 14px;
+    font-family: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     color: #666;
     margin-bottom: 20px;
 }
